# nix-wire

./: Cargo.toml  LICENSE  README.md  flake.nix
nix/: devshell.nix  package.nix
nix/modules/nixos/: default.nix
src/: handshake.rs  lib.rs  ops.rs  protocol.rs  recording.rs  stderr.rs  wire.rs  wire_async.rs
tests/: protocol_integration.rs
tests/fixtures/: simple_session.nixwire
