[package]
name = "nix-wire"
version = "0.1.0"
edition = "2021"
description = "Nix daemon wire protocol recorder, replayer, and decoder"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "nix-wire-record"
path = "src/bin/record.rs"

[[bin]]
name = "nix-wire-replay"
path = "src/bin/replay.rs"

[[bin]]
name = "nix-wire-decode"
path = "src/bin/decode.rs"
